// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should display the error received 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-50"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-53 MuiTypography-subtitle2"
        >
          Status:
        </h6>
      </div>
      <div
        aria-label="Status:"
        class="MuiFormGroup-root makeStyles-radioGroupRoot-46"
        role="radiogroup"
      >
        <label
          class="MuiFormControlLabel-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-54 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-48 PrivateSwitchBase-checked-55 Mui-checked MuiIconButton-colorPrimary"
            data-testid="inactive"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input-57"
                name="Status:"
                type="radio"
                value="0"
              />
              <div
                class="PrivateRadioButtonIcon-root-58 PrivateRadioButtonIcon-checked-60"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-59"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            <p
              class="MuiTypography-root makeStyles-style-47 makeStyles-style-49 MuiTypography-body1"
            >
              inactive
            </p>
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-54 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-48 MuiIconButton-colorPrimary"
            data-testid="active"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-57"
                name="Status:"
                type="radio"
                value="1"
              />
              <div
                class="PrivateRadioButtonIcon-root-58"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-59"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            <p
              class="MuiTypography-root makeStyles-style-47 makeStyles-style-49 MuiTypography-body1"
            >
              active
            </p>
          </span>
        </label>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should display the error received 2`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-50"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-53 MuiTypography-subtitle2"
        >
          Status:
        </h6>
      </div>
      <div
        aria-label="Status:"
        class="MuiFormGroup-root makeStyles-radioGroupRoot-46"
        role="radiogroup"
      >
        <label
          class="MuiFormControlLabel-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-54 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-48 PrivateSwitchBase-checked-55 Mui-checked MuiIconButton-colorPrimary"
            data-testid="inactive"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input-57"
                name="Status:"
                type="radio"
                value="0"
              />
              <div
                class="PrivateRadioButtonIcon-root-58 PrivateRadioButtonIcon-checked-60"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-59"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            <p
              class="MuiTypography-root makeStyles-style-47 makeStyles-style-49 MuiTypography-body1"
            >
              inactive
            </p>
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-54 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-48 MuiIconButton-colorPrimary"
            data-testid="active"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-57"
                name="Status:"
                type="radio"
                value="1"
              />
              <div
                class="PrivateRadioButtonIcon-root-58"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-59"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            <p
              class="MuiTypography-root makeStyles-style-47 makeStyles-style-49 MuiTypography-body1"
            >
              active
            </p>
          </span>
        </label>
      </div>
      <p
        class="MuiFormHelperText-root Mui-focused"
      />
    </div>
  </div>
</body>
`;

exports[`should render a readOnly radio 1`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <div
      class="makeStyles-propertySectionLabel-20"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-23 MuiTypography-subtitle2"
      >
        Status:
      </h6>
    </div>
    <div
      aria-label="Status:"
      class="MuiFormGroup-root makeStyles-radioGroupRoot-16"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root Mui-disabled"
      >
        <span
          aria-disabled="true"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-24 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-18 PrivateSwitchBase-checked-25 Mui-checked PrivateSwitchBase-disabled-26 Mui-disabled MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
          data-testid="inactive"
          tabindex="-1"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input-27"
              disabled=""
              name="Status:"
              type="radio"
              value="0"
            />
            <div
              class="PrivateRadioButtonIcon-root-28 PrivateRadioButtonIcon-checked-30"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-29"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
        >
          <p
            class="MuiTypography-root makeStyles-style-17 makeStyles-style-19 MuiTypography-body1"
          >
            inactive
          </p>
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root Mui-disabled"
      >
        <span
          aria-disabled="true"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-24 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-18 PrivateSwitchBase-disabled-26 Mui-disabled MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
          data-testid="active"
          tabindex="-1"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-27"
              disabled=""
              name="Status:"
              type="radio"
              value="1"
            />
            <div
              class="PrivateRadioButtonIcon-root-28"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-29"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
        >
          <p
            class="MuiTypography-root makeStyles-style-17 makeStyles-style-19 MuiTypography-body1"
          >
            active
          </p>
        </span>
      </label>
    </div>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should render a readOnly radio from widget properties 1`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <div
      class="makeStyles-propertySectionLabel-125"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-128 MuiTypography-subtitle2"
      >
        Status:
      </h6>
    </div>
    <div
      aria-label="Status:"
      class="MuiFormGroup-root makeStyles-radioGroupRoot-121"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root Mui-disabled"
      >
        <span
          aria-disabled="true"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-129 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-123 PrivateSwitchBase-checked-130 Mui-checked PrivateSwitchBase-disabled-131 Mui-disabled MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
          data-testid="inactive"
          tabindex="-1"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input-132"
              disabled=""
              name="Status:"
              type="radio"
              value="0"
            />
            <div
              class="PrivateRadioButtonIcon-root-133 PrivateRadioButtonIcon-checked-135"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-134"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
        >
          <p
            class="MuiTypography-root makeStyles-style-122 makeStyles-style-124 MuiTypography-body1"
          >
            inactive
          </p>
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root Mui-disabled"
      >
        <span
          aria-disabled="true"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-129 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-123 PrivateSwitchBase-disabled-131 Mui-disabled MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
          data-testid="active"
          tabindex="-1"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-132"
              disabled=""
              name="Status:"
              type="radio"
              value="1"
            />
            <div
              class="PrivateRadioButtonIcon-root-133"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-134"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
        >
          <p
            class="MuiTypography-root makeStyles-style-122 makeStyles-style-124 MuiTypography-body1"
          >
            active
          </p>
        </span>
      </label>
    </div>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should render the radio 1`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <div
      class="makeStyles-propertySectionLabel-5"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-8 MuiTypography-subtitle2"
      >
        Status:
      </h6>
    </div>
    <div
      aria-label="Status:"
      class="MuiFormGroup-root makeStyles-radioGroupRoot-1"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-9 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-3 PrivateSwitchBase-checked-10 Mui-checked MuiIconButton-colorPrimary"
          data-testid="inactive"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input-12"
              name="Status:"
              type="radio"
              value="0"
            />
            <div
              class="PrivateRadioButtonIcon-root-13 PrivateRadioButtonIcon-checked-15"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-14"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <p
            class="MuiTypography-root makeStyles-style-2 makeStyles-style-4 MuiTypography-body1"
          >
            inactive
          </p>
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-9 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-3 MuiIconButton-colorPrimary"
          data-testid="active"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-12"
              name="Status:"
              type="radio"
              value="1"
            />
            <div
              class="PrivateRadioButtonIcon-root-13"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-14"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <p
            class="MuiTypography-root makeStyles-style-2 makeStyles-style-4 MuiTypography-body1"
          >
            active
          </p>
        </span>
      </label>
    </div>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should render the radio with empty style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-95"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-98 MuiTypography-subtitle2"
        >
          Status:
        </h6>
      </div>
      <div
        aria-label="Status:"
        class="MuiFormGroup-root makeStyles-radioGroupRoot-91"
        role="radiogroup"
      >
        <label
          class="MuiFormControlLabel-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-99 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-93 PrivateSwitchBase-checked-100 Mui-checked MuiIconButton-colorPrimary"
            data-testid="inactive"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input-102"
                name="Status:"
                type="radio"
                value="0"
              />
              <div
                class="PrivateRadioButtonIcon-root-103 PrivateRadioButtonIcon-checked-105"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-104"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            <p
              class="MuiTypography-root makeStyles-style-92 makeStyles-style-94 MuiTypography-body1"
            >
              inactive
            </p>
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-99 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-93 MuiIconButton-colorPrimary"
            data-testid="active"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-102"
                name="Status:"
                type="radio"
                value="1"
              />
              <div
                class="PrivateRadioButtonIcon-root-103"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-104"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            <p
              class="MuiTypography-root makeStyles-style-92 makeStyles-style-94 MuiTypography-body1"
            >
              active
            </p>
          </span>
        </label>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should render the radio with help hint 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-110"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-113 MuiTypography-subtitle2"
        >
          Status:
        </h6>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
          focusable="false"
          style="margin-left: 8px; font-size: 16px;"
          title=""
          viewBox="0 0 24 24"
        >
          <path
            d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
          />
        </svg>
      </div>
      <div
        aria-label="Status:"
        class="MuiFormGroup-root makeStyles-radioGroupRoot-106"
        role="radiogroup"
      >
        <label
          class="MuiFormControlLabel-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-114 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-108 PrivateSwitchBase-checked-115 Mui-checked MuiIconButton-colorPrimary"
            data-testid="inactive"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input-117"
                name="Status:"
                type="radio"
                value="0"
              />
              <div
                class="PrivateRadioButtonIcon-root-118 PrivateRadioButtonIcon-checked-120"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-119"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            <p
              class="MuiTypography-root makeStyles-style-107 makeStyles-style-109 MuiTypography-body1"
            >
              inactive
            </p>
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-114 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-108 MuiIconButton-colorPrimary"
            data-testid="active"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-117"
                name="Status:"
                type="radio"
                value="1"
              />
              <div
                class="PrivateRadioButtonIcon-root-118"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-119"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            <p
              class="MuiTypography-root makeStyles-style-107 makeStyles-style-109 MuiTypography-body1"
            >
              active
            </p>
          </span>
        </label>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should render the radio with style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-80"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-83 MuiTypography-subtitle2"
        >
          Status:
        </h6>
      </div>
      <div
        aria-label="Status:"
        class="MuiFormGroup-root makeStyles-radioGroupRoot-76"
        role="radiogroup"
      >
        <label
          class="MuiFormControlLabel-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-84 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-78 PrivateSwitchBase-checked-85 Mui-checked MuiIconButton-colorPrimary"
            data-testid="inactive"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input-87"
                name="Status:"
                type="radio"
                value="0"
              />
              <div
                class="PrivateRadioButtonIcon-root-88 PrivateRadioButtonIcon-checked-90"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-89"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            <p
              class="MuiTypography-root makeStyles-style-77 makeStyles-style-79 MuiTypography-body1"
            >
              inactive
            </p>
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-84 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-78 MuiIconButton-colorPrimary"
            data-testid="active"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-87"
                name="Status:"
                type="radio"
                value="1"
              />
              <div
                class="PrivateRadioButtonIcon-root-88"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-89"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            <p
              class="MuiTypography-root makeStyles-style-77 makeStyles-style-79 MuiTypography-body1"
            >
              active
            </p>
          </span>
        </label>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should render the radio without style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-65"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-68 MuiTypography-subtitle2"
        >
          Status:
        </h6>
      </div>
      <div
        aria-label="Status:"
        class="MuiFormGroup-root makeStyles-radioGroupRoot-61"
        role="radiogroup"
      >
        <label
          class="MuiFormControlLabel-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-69 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-63 PrivateSwitchBase-checked-70 Mui-checked MuiIconButton-colorPrimary"
            data-testid="inactive"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input-72"
                name="Status:"
                type="radio"
                value="0"
              />
              <div
                class="PrivateRadioButtonIcon-root-73 PrivateRadioButtonIcon-checked-75"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-74"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            <p
              class="MuiTypography-root makeStyles-style-62 makeStyles-style-64 MuiTypography-body1"
            >
              inactive
            </p>
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-69 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-63 MuiIconButton-colorPrimary"
            data-testid="active"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                class="PrivateSwitchBase-input-72"
                name="Status:"
                type="radio"
                value="1"
              />
              <div
                class="PrivateRadioButtonIcon-root-73"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-74"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            <p
              class="MuiTypography-root makeStyles-style-62 makeStyles-style-64 MuiTypography-body1"
            >
              active
            </p>
          </span>
        </label>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should send mutation when clicked 1`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <div
      class="makeStyles-propertySectionLabel-35"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-38 MuiTypography-subtitle2"
      >
        Status:
      </h6>
    </div>
    <div
      aria-label="Status:"
      class="MuiFormGroup-root makeStyles-radioGroupRoot-31"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-39 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-33 PrivateSwitchBase-checked-40 Mui-checked MuiIconButton-colorPrimary"
          data-testid="inactive"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input-42"
              name="Status:"
              type="radio"
              value="0"
            />
            <div
              class="PrivateRadioButtonIcon-root-43 PrivateRadioButtonIcon-checked-45"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-44"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <p
            class="MuiTypography-root makeStyles-style-32 makeStyles-style-34 MuiTypography-body1"
          >
            inactive
          </p>
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-39 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-33 MuiIconButton-colorPrimary"
          data-testid="active"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-42"
              name="Status:"
              type="radio"
              value="1"
            />
            <div
              class="PrivateRadioButtonIcon-root-43"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-44"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <p
            class="MuiTypography-root makeStyles-style-32 makeStyles-style-34 MuiTypography-body1"
          >
            active
          </p>
        </span>
      </label>
    </div>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should send mutation when clicked 2`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <div
      class="makeStyles-propertySectionLabel-35"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-38 MuiTypography-subtitle2"
      >
        Status:
      </h6>
    </div>
    <div
      aria-label="Status:"
      class="MuiFormGroup-root makeStyles-radioGroupRoot-31"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-39 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-33 PrivateSwitchBase-checked-40 Mui-checked MuiIconButton-colorPrimary"
          data-testid="inactive"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input-42"
              name="Status:"
              type="radio"
              value="0"
            />
            <div
              class="PrivateRadioButtonIcon-root-43 PrivateRadioButtonIcon-checked-45"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-44"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <p
            class="MuiTypography-root makeStyles-style-32 makeStyles-style-34 MuiTypography-body1"
          >
            inactive
          </p>
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-39 MuiRadio-root MuiRadio-colorPrimary makeStyles-radio-33 MuiIconButton-colorPrimary"
          data-testid="active"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-42"
              name="Status:"
              type="radio"
              value="1"
            />
            <div
              class="PrivateRadioButtonIcon-root-43"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-44"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <p
            class="MuiTypography-root makeStyles-style-32 makeStyles-style-34 MuiTypography-body1"
          >
            active
          </p>
        </span>
      </label>
    </div>
    <p
      class="MuiFormHelperText-root Mui-focused"
    />
  </div>
</div>
`;
